# CodeGrapher

./: .gitignore  LICENSE  README.md  analyzer_lib.py  app.py  install.sh  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: release.yml
codegrapher/: __init__.py  analyzer.py  cli.py  core.py  markdown.py  models.py  visualizer.py
codegrapher/parsers/: __init__.py  base.py  javascript.py  python.py
codegrapher/templates/: __init__.py  codegraph.html
examples/: example.py
static/: styles.css
templates/: index.html
tests/: test_analyzer.py  test_cli.py  test_core.py
tests/fixtures/: dummy_project.py
web/: index.html
