[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegrapher"
version = "0.1.0"
description = "Generate token-optimized context maps of Python repositories for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "google-genai",
    "gitignore-parser",
    "typer",
    "rich",
    "tree-sitter>=0.23",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "keyring"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyinstaller"
]

[tool.setuptools]
packages = ["codegrapher", "codegrapher.parsers", "codegrapher.templates"]

[tool.setuptools.package-data]
"codegrapher.templates" = ["*.html"]

[project.scripts]
cg = "codegrapher.cli:app"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:google.genai.*",
]
